fixed z-index problem

--- a/Special Offers.css
+++ b/Special Offers.css
@@ -15,9 +15,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 2px solid rgb(230, 226, 226);
+    border: 1px solid rgb(230, 226, 226);
     margin-top: 35px;
-    padding: 10px 200px;
+    padding: 5px 130px;
     border-radius: 18px;
     box-shadow:  0px 0px 7px #aaaaaa,
              -25px 0px 30px #eeeded;
@@ -28,22 +28,24 @@
 }
 .newsLetterBody h2{
   font-family:"Poppins";
-  font-size: 28px;
+  font-size: 23px;
   font-weight: 500;
 }
 .newsLetterBody p{
      font-family:"Poppins"; 
-        font-size: 16px !important;
+        font-size: 14px !important;
         color: rgb(71, 71, 71);
+        margin:2px !important;
 }
 .newsLetterBody input{
- padding: 15px 65px;
- border: 2px solid gray;
+ padding: 10px 40px;
+ border: 1px solid gray;
  border-radius: 9px; 
  font-size: 17px;
+ outline: none;
 }
 .newsLetterBody button{
-    padding: 12px 40px;
+    padding: 12px 30px;
     border: none;
     border-radius: 10px;
     background-color: green;
@@ -59,5 +61,10 @@
 }
 .newsLetterBody .agenta{
     font-size: 13px !important;
+}
+@media screen and (max-width:767px)and (max-width:960px){
+.newsLetterBody{
 
 }
+}
+
