--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@
 *{
     margin: 0px;
     padding: 0px;
+    scroll-behavior: smooth;
 }
 body{
 
@@ -26,8 +27,8 @@ position:relative;
   -moz-transition: all .5s ease 0s;
   -o-transition: all .5s ease 0s;
   transition: all .5s ease 0s;
-
-  position: fixed;
+z-index: 100;
+  position:fixed;
 }
 /* logo desing start */
 .header img{
@@ -351,7 +352,18 @@ margin: 14px 10px 10px 150px;
 .header nav input,button,.fi-sr-shopping-cart{
   display: none;
 }
-
+.header img{
+  width: 6%;
+  height: 100%;
+}
+.bodyContainer{
+flex-direction:column;
+}
+.bodyContainer .secRow img{
+width: 100%;
+height: 100%;
+margin-top: 20px;
+}
 }
 
 
